	(compile-multiple-strings-for-emacs): Ditto.

	* swank-backend.lisp (swank-compile-string): Change :DEBUG key arg
	to :POLICY.

	* swank-scl.lisp, swank-openmcl.lisp, swank-lispworks.lisp
	* swank-ecl.lisp, swank-corman.lisp, swank-cmucl.lisp,
	* swank-clisp.lisp, swank-allegro.lisp, swank-sbcl.lisp:

	Changed accordingly.

2008-12-31  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp ([method] source-locations (symbol)): Drop
	the unused _; the compiler dosn't like it.

2008-12-31  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp ([method] source-locations (symbol)): 

	* slime.el (slime-cd, slime-pwd): New commands.
	(slime-change-directory): New function.
	(slime-change-directory-hooks): New hook.

2008-12-31  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] find-definition.2): Also fails for Lispworks.
	([test] interrupt-at-toplevel, [test] interrupt-in-debugger): Those
	don't work well if there's no REPL thread.

	* swank-backend.lisp (wait-for-input, wait-for-one-stream): Don't
	use PEEK-CHAR because we can't interrupt that cleanly.
	* swank.lisp (simple-serve-requests): Run the REPL inside
	WITH-CONNECTION.
	* swank-lispworks.lisp (emacs-connected): Don't install the signal
	handler here ...
	(install-sigint-handler): ... use this instead

2008-12-29  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (find-definitions, source-locations): Use
	ccl:find-definition-sources.
	(swank-compile-string, compile-temp-file): Use new parameters to
	compile-file to adjust source locations.

2008-12-28  Helmut Eller  <heller@common-lisp.net>

	Recent CCLs support much better source location recording.
	Let's use the new features in SLIME.

	* swank-openmcl.lisp (function-source-location): Use
	ccl:function-source-note.
	(pc-source-location): New function, based on
	ccl:find-source-note-at-pc.
	(frame-source-location-for-emacs): Use it.

2008-12-27  Helmut Eller  <heller@common-lisp.net>
